# ride-hailing-system

./: pyproject.toml
services/common/: config.py
services/event-producer/: Dockerfile  main.py
services/feature-consumer/: Dockerfile  main.py
services/inference-api/: Dockerfile  derive.py  main.py  pricing.py
services/inference-api/eta/: dropoff_adjust.py  dropoff_model.py  features.py  pickup_model.py
services/inference-api/geo/: utils.py
services/inference-api/models/: dropoff_model.joblib  eta_model.joblib
services/inference-api/routing/: osrm.py
training/: eval.py  train_eta.py
training/data/: schema.py
training/features/: reconstruct.py
training_dropoff/: eval.py  train.py
training_dropoff/data/: schema.py
training_dropoff/features/: reconstruct.py
training_pickup/: eval.py  generate_synthetic_data.py  run.py  split.py  train.py  train_eta.py
training_pickup/features/: reconstruct.py
